--- a/OSHGuiBuilder.csproj
+++ b/OSHGuiBuilder.csproj
@@ -51,8 +51,10 @@
     <Compile Include="Controls\CheckBox.cs" />
     <Compile Include="Controls\ContainerControl.cs" />
     <Compile Include="Controls\Form.cs" />
+    <Compile Include="Controls\GroupBox.cs" />
     <Compile Include="Controls\Label.cs" />
     <Compile Include="Controls\Panel.cs" />
+    <Compile Include="Controls\RadioButton.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
