--- a/OSHGuiBuilder.csproj
+++ b/OSHGuiBuilder.csproj
@@ -46,16 +46,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controls\BaseControl.cs" />
-    <Compile Include="Controls\Button.cs" />
-    <Compile Include="Controls\CheckBox.cs" />
-    <Compile Include="Controls\ContainerControl.cs" />
-    <Compile Include="Controls\Form.cs" />
-    <Compile Include="Controls\GroupBox.cs" />
-    <Compile Include="Controls\Label.cs" />
-    <Compile Include="Controls\Panel.cs" />
-    <Compile Include="Controls\RadioButton.cs" />
+    <Compile Include="DelayedEventHandler.cs" />
     <Compile Include="Extension.cs" />
+    <Compile Include="GuiControls\BaseControl.cs" />
+    <Compile Include="GuiControls\Button.cs" />
+    <Compile Include="GuiControls\CheckBox.cs" />
+    <Compile Include="GuiControls\ContainerControl.cs" />
+    <Compile Include="GuiControls\Form.cs" />
+    <Compile Include="GuiControls\GroupBox.cs" />
+    <Compile Include="GuiControls\Label.cs" />
+    <Compile Include="GuiControls\Panel.cs" />
+    <Compile Include="GuiControls\RadioButton.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +65,13 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Toolbox\Toolbox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Toolbox\ToolboxGroup.cs" />
+    <Compile Include="Toolbox\ToolboxItem.cs" />
+    <Compile Include="Toolbox\ToolboxItemBase.cs" />
+    <Compile Include="Toolbox\ToolboxType.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +83,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -85,6 +94,21 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="sidebar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="toolbox.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="toolbox_hover.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Toolbox\minus.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Toolbox\plus.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
