--- a/OSHVisualGui.csproj
+++ b/OSHVisualGui.csproj
@@ -56,6 +56,7 @@
     <Compile Include="CodeForm.Designer.cs">
       <DependentUpon>CodeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ControlManager.cs" />
     <Compile Include="DelayedEventHandler.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="GuiControls\BaseControl.cs" />
