--- a/OSHVisualGui.csproj
+++ b/OSHVisualGui.csproj
@@ -40,9 +40,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
     <Reference Include="System.Drawing" />
@@ -57,6 +57,7 @@
       <DependentUpon>CodeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="ControlManager.cs" />
+    <Compile Include="ControlSerializer.cs" />
     <Compile Include="DelayedEventHandler.cs" />
     <Compile Include="Extension.cs" />
     <Compile Include="GuiControls\Button.cs" />
