--- a/OSHVisualGui.csproj
+++ b/OSHVisualGui.csproj
@@ -33,6 +33,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>osh.ico</ApplicationIcon>
@@ -58,8 +59,20 @@
       <DependentUpon>CodeForm.cs</DependentUpon>
     </Compile>
     <Compile Include="CodeSerializer.cs" />
+    <Compile Include="CustomControls\ColorPicker.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="ControlManager.cs" />
     <Compile Include="ControlSerializer.cs" />
+    <Compile Include="CustomControls\ColorTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\PoperContainer.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="CustomControls\PoperContainer.Designer.cs">
+      <DependentUpon>PoperContainer.cs</DependentUpon>
+    </Compile>
     <Compile Include="DelayedEventHandler.cs" />
     <Compile Include="EventEditor.cs">
       <SubType>Form</SubType>
@@ -142,6 +155,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThemeManagerForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThemeManagerForm.Designer.cs">
+      <DependentUpon>ThemeManagerForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Toolbox\Toolbox.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -180,6 +199,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ThemeManagerForm.resx">
+      <DependentUpon>ThemeManagerForm.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
