--- a/OSHVisualGui.csproj
+++ b/OSHVisualGui.csproj
@@ -171,6 +171,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Theme.cs" />
+    <Compile Include="ThemeCodeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ThemeCodeForm.Designer.cs">
+      <DependentUpon>ThemeCodeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="ThemeManagerForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -215,6 +221,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="ThemeCodeForm.resx">
+      <DependentUpon>ThemeCodeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ThemeManagerForm.resx">
       <DependentUpon>ThemeManagerForm.cs</DependentUpon>
     </EmbeddedResource>
