--- a/branches/new_renderer/OSHVisualGui.csproj
+++ b/branches/new_renderer/OSHVisualGui.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Toolbox\ToolboxItem.cs" />
     <Compile Include="Toolbox\ToolboxItemBase.cs" />
     <Compile Include="Toolbox\ToolboxType.cs" />
+    <Compile Include="Utils\XorStr.cs" />
     <EmbeddedResource Include="CodeForm.resx">
       <DependentUpon>CodeForm.cs</DependentUpon>
     </EmbeddedResource>
