--- a/trunk/OSHVisualGui.csproj
+++ b/trunk/OSHVisualGui.csproj
@@ -53,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChangedProperty.cs" />
     <Compile Include="CodeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,14 +75,14 @@
     <Compile Include="CustomControls\PoperContainer.Designer.cs">
       <DependentUpon>PoperContainer.cs</DependentUpon>
     </Compile>
-    <Compile Include="DelayedEventHandler.cs" />
+    <Compile Include="Utils\DelayedEventHandler.cs" />
     <Compile Include="EventEditor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="EventEditor.Designer.cs">
       <DependentUpon>EventEditor.cs</DependentUpon>
     </Compile>
-    <Compile Include="Extension.cs" />
+    <Compile Include="Utils\Extension.cs" />
     <Compile Include="FastColoredTextBox\AutocompleteItem.cs" />
     <Compile Include="FastColoredTextBox\AutocompleteMenu.cs">
       <SubType>Component</SubType>
@@ -242,9 +243,6 @@
     <Content Include="osh.ico" />
     <None Include="Toolbox\plus.png" />
     <None Include="Toolbox\minus.png" />
-    <None Include="sidebar.png" />
-    <None Include="toolbox_hover.png" />
-    <None Include="toolbox.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
