--- a/OSHVisualGui.csproj
+++ b/OSHVisualGui.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>OSHVisualGui</RootNamespace>
     <AssemblyName>OSHVisualGui</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -24,6 +24,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -34,11 +35,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>osh.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.7.0.1\lib\net35\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
@@ -75,6 +81,7 @@
     <Compile Include="CustomControls\PoperContainer.Designer.cs">
       <DependentUpon>PoperContainer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Style.cs" />
     <Compile Include="Utils\DelayedEventHandler.cs" />
     <Compile Include="EventEditor.cs">
       <SubType>Form</SubType>
@@ -150,20 +157,6 @@
     <Compile Include="GuiControls\TextBox.cs" />
     <Compile Include="GuiControls\Timer.cs" />
     <Compile Include="GuiControls\TrackBar.cs" />
-    <Compile Include="JSON\CloseBracketStrategy.cs" />
-    <Compile Include="JSON\CloseSquareBracketStrategy.cs" />
-    <Compile Include="JSON\ColonCharacterStrategy.cs" />
-    <Compile Include="JSON\CommaCharacterStrategy.cs" />
-    <Compile Include="JSON\DefaultCharacterStrategy.cs" />
-    <Compile Include="JSON\DoubleQuoteStrategy.cs" />
-    <Compile Include="JSON\ICharacterStrategy.cs" />
-    <Compile Include="JSON\JsonPPStrategyContext.cs" />
-    <Compile Include="JSON\JsonPrettyPrinter.cs" />
-    <Compile Include="JSON\OpenBracketStrategy.cs" />
-    <Compile Include="JSON\OpenSquareBracketStrategy.cs" />
-    <Compile Include="JSON\PPScopeState.cs" />
-    <Compile Include="JSON\SingleQuoteStrategy.cs" />
-    <Compile Include="JSON\SkipWhileNotInStringStrategy.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,18 +165,17 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Theme.cs" />
-    <Compile Include="ThemeCodeForm.cs">
+    <Compile Include="StyleCodeForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ThemeCodeForm.Designer.cs">
-      <DependentUpon>ThemeCodeForm.cs</DependentUpon>
+    <Compile Include="StyleCodeForm.Designer.cs">
+      <DependentUpon>StyleCodeForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="ThemeManagerForm.cs">
+    <Compile Include="StyleManagerForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ThemeManagerForm.Designer.cs">
-      <DependentUpon>ThemeManagerForm.cs</DependentUpon>
+    <Compile Include="StyleManagerForm.Designer.cs">
+      <DependentUpon>StyleManagerForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Toolbox\Toolbox.cs">
       <SubType>UserControl</SubType>
@@ -223,12 +215,13 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ThemeCodeForm.resx">
-      <DependentUpon>ThemeCodeForm.cs</DependentUpon>
+    <EmbeddedResource Include="StyleCodeForm.resx">
+      <DependentUpon>StyleCodeForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ThemeManagerForm.resx">
-      <DependentUpon>ThemeManagerForm.cs</DependentUpon>
+    <EmbeddedResource Include="StyleManagerForm.resx">
+      <DependentUpon>StyleManagerForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
